# PoolMiner_Lite

./: .clang-format  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflow/: auto_test.yml
.github/workflows/: auto.yml  auto_test.yml  gen_build.yml  gen_format.yml
android/: CMakeLists.txt  build.gradle  ch.html
android/src/main/: AndroidManifest.xml
android/src/main/c/: CMakeLists.txt  MinerService.c  android_main.c
android/src/main/cpp/: CMakeLists.txt  MinerService.cpp  android_main.cpp
android/src/main/res/colors/: tab_text_color.xml
android/src/main/res/drawable/: button_start_mine.xml  button_stop_mine.xml  main_background.xml  round_fill.xml  round_stroke.xml  seekbar_progress_style.xml  seekbar_thumb.xml  tab_indicator.xml  tablayout_background.xml
android/src/main/res/layout/: activity_main.xml  console_item.xml  fragment_config.xml  fragment_miner.xml  fragment_news.xml
android/src/main/res/mipmap/: ic_launcher_background.xml  ic_launcher_foreground.xml
core/: CMakeLists.txt  build.gradle
core/data/: sample_json.json
core/main/: CMakeLists.txt  hello.cpp  jansson.cpp  jansson.hpp  json.cpp  json.h  json.hpp  miner_core.cpp  miner_core.hpp  util.c  util.cpp  util.h  util.hpp
core/main/algorithm/: hashing.cpp  hashing.hpp  scrypt.cpp  scrypt.hpp  sha256.cpp  sha256.hpp
core/main/cpuminer/: cpu-miner.c
core/test/: hello_test.cpp  json_test.c  json_test.cpp  main.c  mine_test.cpp  miner_test.cpp  sample_json_parser.cpp  test.cpp  util_test.c  util_test.cpp
core/test/algorithm/: sha256_test.c  sha256_test.cpp
lib/: build.gradle
lib/src/main/cpp/: hello.cpp
lib/src/main/public/: PoolMiner_Lite.h
lib/src/test/cpp/: hello_test.cpp
(+19 files in other folders)
